--- a/lottery/package.json
+++ b/lottery/package.json
@@ -15,6 +15,7 @@
     "ganache-cli": "^6.12.2",
     "mocha": "^9.1.1",
     "solc": "^0.4.19",
+    "truffle-hdwallet-provider": "^1.0.17",
     "web3": "^1.0.0-beta.26"
   }
 }
