--- a/inbox/package.json
+++ b/inbox/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "ganache-cli": "^6.12.2",
     "mocha": "^9.1.1",
-    "solc": "^0.8.7-fixed",
+    "solc": "^0.4.17",
     "web3": "^1.0.0-beta.26"
   }
 }
