--- a/kickstart/package.json
+++ b/kickstart/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "mocha"
+    "test": "mocha",
+    "dev": "node server.js",
+    "build": "next build"
   },
   "author": "",
   "license": "ISC",
